Bug 136097 - Physics Animation Effects act weird when skipped, reversed and played again
Summary: Physics Animation Effects act weird when skipped, reversed and played again
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-25 07:45 UTC by Sarper Akdemir (allotropia)
Modified: 2020-08-26 13:12 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example odp containing a physics animation effect (14.61 KB, application/vnd.oasis.opendocument.presentation)
2020-08-25 07:47 UTC, Sarper Akdemir (allotropia)
Details
Screen recording showing the bug in action (3.63 MB, video/mp4)
2020-08-25 07:48 UTC, Sarper Akdemir (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sarper Akdemir (allotropia) 2020-08-25 07:45:21 UTC
Description:
When a physics animation effect gets skipped before it finishes playing, and get reversed and played again. It doesn't act like the initial play.

Steps to Reproduce:
1.Download the attached odp below
2.Start the animation effect by clicking
3.Skip the animation effect before it ends with a single click
4.Step back, reversing the animation effect
5.Start the animation effect again

Actual Results:
Second animation effect doesn't act as expected.

Expected Results:
Two animation effects should be identical.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.1.0.0.alpha0+
Build ID: 5e8875780d665b7ae0fee1a053b5ce78ec513f69
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Sarper Akdemir (allotropia) 2020-08-25 07:47:48 UTC
Created attachment 164658 [details]
Example odp containing a physics animation effect
Comment 2 Sarper Akdemir (allotropia) 2020-08-25 07:48:52 UTC
Created attachment 164659 [details]
Screen recording showing the bug in action
Comment 3 Commit Notification 2020-08-26 12:48:14 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d29c27af4aff3f5268bd4a07647fd7435603ba11

tdf#136097: make physics animation effects handle skips and rewinds

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.